--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -19,8 +19,12 @@
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
+    <Compile Remove="EchoBot\**" />
     <Content Remove="$(SpaRoot)**" />
+    <Content Remove="EchoBot\**" />
+    <EmbeddedResource Remove="EchoBot\**" />
     <None Remove="$(SpaRoot)**" />
+    <None Remove="EchoBot\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
     
