Add bot management to client app

--- a/Chat/appsettings.json
+++ b/Chat/appsettings.json
@@ -1,11 +1,13 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Trace",
-            "System": "Information",
-            "Microsoft": "Information"
-        }
-    },
-    "AllowedHosts": "*",
-    "ResourceConnectionString": "REPLACE_WITH_CONNECTION_STRING"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Trace",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+  "ResourceConnectionString": "REPLACE_WITH_CONNECTION_STRING",
+  "BotAcsId": "REPLACE_WITH_BOT_ACS_ID",
+  "BotName": "Demo Bot"
 }
